// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dot converted basic 1`] = `
"graph {
  \\"1\\"
  \\"2\\" [\\"color\\"=\\"red\\"]
  \\"3\\"
  \\"4\\"
  \\"1\\"--\\"2\\"
  \\"3\\"--\\"4\\"
}
"
`;

exports[`dot converted compound 1`] = `
"digraph {
  \\"1\\"
  \\"2\\" [\\"color\\"=\\"red\\"]
  \\"3\\"
  \\"4\\"
  \\"1\\"->\\"2\\"
  \\"3\\"->\\"4\\"
  subgraph \\"3\\" {
    \\"4\\";'
  }
}
"
`;
